fixed icon visibility
Former-commit-id: 8c9a7ba1d75f725ed7adabe53efa9fb61354e810
Former-commit-id: 5348fc6b7b99a344b3c5eedad2eac0c3fea12142

--- a/eww/bar/scss/lib.scss
+++ b/eww/bar/scss/lib.scss
@@ -12,12 +12,12 @@ $foreground: mix(mix($color0, $color1, 50%), $foreground, 25%);
   font-weight: bolder;
   padding: 0px 10px;
   transition: all 0.5s;
-  border: 1px solid mix($background, $color1, $weight: 0.5);
+  border: 1px solid mix($background, $color1, 25%);
 }
 
 .icon {
   margin: 0px 5px;
-  font-size: 13;
+  font-size: 20;
   font-weight: normal;
 }
 
